# OmniDesk

./: .gitignore  Makefile  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-desktop.yml
scripts/: bump-version.mjs  collect-release-assets.mjs  create-macos-dmg.sh  create-release-repo.mjs  create-updater-latest.mjs  local-mac-release.mjs  package-local-release.mjs  publish-local-release.mjs  release.mjs
src/: App.tsx  config.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CommonSettings.tsx  Dock.tsx  ExportNotice.tsx  Launcher.tsx  LockScreen.tsx  MasterPasswordPrompt.tsx  OmniDeskLogo.tsx  OptionSelect.tsx  QuickPanel.tsx  SecuritySettings.tsx  UpdateProgressPanel.tsx  VaultFilesPanel.tsx
src/lib/: desktop.ts  googleAuthenticatorMigration.ts  store.tsx  updater.ts
src/views/: Bookmarks.tsx  DevTools.tsx  KeyVault.tsx  Notes.tsx  Pomodoro.tsx  Snippets.tsx  Subscriptions.tsx  TOTP.tsx
updates/: latest.json
updates/app-v0.1.10/: OmniDesk-v0.1.10-macos-aarch64.app.tar.gz.sig
updates/app-v0.1.11/: OmniDesk-v0.1.11-macos-aarch64.app.tar.gz.sig
updates/app-v0.1.12/: OmniDesk-v0.1.12-macos-aarch64.app.tar.gz.sig
updates/app-v0.1.13/: OmniDesk-v0.1.13-macos-aarch64.app.tar.gz.sig
updates/app-v0.1.3/: OmniDesk-v0.1.3-macos-aarch64.app.tar.gz.sig
updates/app-v0.1.4/: OmniDesk-v0.1.4-macos-aarch64.app.tar.gz.sig
updates/app-v0.1.5/: OmniDesk-v0.1.5-macos-aarch64.app.tar.gz.sig
(+3 files in other folders)
