[package]
name = "omnidesk"
version = "0.1.5"
description = "Local-first security and productivity desktop toolkit."
authors = ["OmniDesk"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "omnidesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
aes-gcm = "0.10"
arboard = "3"
argon2 = "0.5"
base64 = "0.22"
image = "0.25.10"
open = "5"
rand = "0.8"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
url = "2"
